--- a/book_table/templates/index.html
+++ b/book_table/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-
+<!-- Landing section -->
 <section>
   <div class="row logo no-gutters">
     <div class="col">
@@ -15,8 +15,8 @@
   </div>
 </section>
 
+<!-- Carousel section -->
 <section class="info-carousel salmon-filter">
-
   <div id="carouselExampleIndicators" class="carousel slide carousel-outter text-center white-text dark-brown  "
     data-ride="carousel">
     <ol class="carousel-indicators">
@@ -55,9 +55,10 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
-</div>
+  </div>
 </section>
 
+<!--Text section -->
 <section class="info-values">
   <div class="row no-gutters">
     <div class="col-12 col-sm-4">
@@ -97,7 +98,4 @@
     </div>
   </div>
 </section>
-
-
-
 {%endblock%}
