--- a/book_table/templates/table_booking.html
+++ b/book_table/templates/table_booking.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 
+<!-- Table booking section -->
 <section>
   <div class="container">
     <div class="row">
       <div class="col mt-5 ">
         <div class="jumbotron">
-
           <h3 class="display-4">Book a table</h3>
           <hr class="my-4">
           <div class="row">
@@ -29,6 +29,7 @@
                 </div>
               </div>
             </div>
+            <!-- List of already booked tables -->
             <div class="col-md-6">
               <div class="card mt-4" style="width: 18rem;">
                 <div class="card-body card-height">
