--- a/book_table/templates/menu.html
+++ b/book_table/templates/menu.html
@@ -165,7 +165,7 @@
           such as dairy, eggs, wheat, soybeans, tree nuts, peanuts, fish, shellfish or wheat. </p>
       </div>
     </div>
-
+  </div>
 </section>
 
 {%endblock%}
