--- a/book_table/templates/base.html
+++ b/book_table/templates/base.html
@@ -80,7 +80,7 @@
           <form method="post" action="{% url 'account_logout' %}">
             {% csrf_token %}
             {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
             {% endif %}
             <button class="btn btn-danger" type="submit">Sign Out</button>
           </form>
@@ -109,6 +109,7 @@
               <span class="sr-only">Facebook</span>
             </a>
           </li>
+        </ul>
       </div>
     </div>
   </footer>
