--- a/templates/mybooking.html
+++ b/templates/mybooking.html
@@ -20,7 +20,7 @@
                 <h2 class="mb-0">
                   <button class="btn btn-block text-left" type="button" data-toggle="collapse"
                     data-target="#collapse{{ forloop.counter }}" aria-expanded="true" aria-controls="collapseOne">
-                    Reservation | Date: {{reservation.date}}
+                    Reservation | Date: {{reservation.date | date:'Y-m-d' }}
                     <i class="fas fa-caret-down"></i>
                   </button>
                 </h2>
